tests/ui/type-inference/swap-with-unspecified-type.stderr
error[E0282]: type annotations needed
  --> $DIR/swap-with-unspecified-type.rs:7:13
   |
LL |     unsafe {swap::<&mut _>(transmute(&a), transmute(&b))};
   |             ^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `swap`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
